Práctica Arrays Anidados 2

--- a/Práctica Arrays Anidados/index.html
+++ b/Práctica Arrays Anidados/index.html
@@ -12,13 +12,13 @@
     <p>Agrega 3 pokemones y luego visualizalos.</p>
 
     <!-- Definimos la estructura de la aplicación -->
-    <input type="text" placeholder="Nombre">
-    <input type="text" placeholder="Tipo">
-    <input type="text" placeholder="Poder">
+    <input id="nombre" type="text" placeholder="Nombre">
+    <input id="tipo" type="text" placeholder="Tipo">
+    <input id="poder" type="text" placeholder="Poder">
     <br>
     <button id="agregar">Agregar</button>
     <button id="mostrar">Mostrar</button>
-    <p>Mensaje</p>
+    <p id="mensaje"></p>
 
     <script src="script.js"></script>
 </body>
