--- a/Sesión 35 - DOM/Intro/index.html
+++ b/Sesión 35 - DOM/Intro/index.html
@@ -8,5 +8,6 @@
         <h1 id="title" class="title">Dom - Document Object Model</h1>
         <!-- <p>¡Soy un cometario!</p> -->
         
+        <script src="script.js"></script>
     </body>
 </html>
